# Illegal-Pine

./: .gitignore
Pine-Shooter/: CMakeLists.txt  Pine_Shooter  main.cpp  test
Pine-Shooter/data/: LeftH.txt  Retangulo.txt  RightH.txt  config.json  quad_prob.txt  tri_prob.txt  triangulinho.txt
Pine-Shooter/data/output/: diffab_out.txt  diffba_out.txt  intersec_out.txt  triquad_diff-ab.txt  triquad_diff-ba.txt  triquad_intersec.txt  triquad_union.txt  union_out.txt
Pine-Shooter/headers/: BoundingBox.h  Engine.h  Point.h  Poligono.h  Ponto.h  Temporizador.h  util.h
Pine-Shooter/image_libs/: ImageClass.cpp  ImageClass.h  TextureClass.cpp  TextureClass.h
Pine-Shooter/src/: BoundingBox.cpp  Engine.cpp  Point.cpp  Poligono.cpp  Ponto.cpp  Temporizador.cpp
